--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -10,4 +10,55 @@ body {
   font-family: "Kulim Park", sans-serif;
   background-color: var(--background);
   color: var(--text);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+a {
+  color: var(--text);
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: space-between;
+  width: 100vw;
+  height: 100vh;
+  padding: 20px 100px;
+  background: var(--background) url("../imagens/banner.svg") no-repeat top/cover;
+}
+
+header #header-topo {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header #apresentacao {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 750px;
+}
+
+#apresentacao h1 {
+  font-weight: bold;
+  font-size: 12.8rem;
+}
+
+#apresentacao p {
+  color: var(--buttons);
+  font-size: 3.2rem;
+}
+
+ul {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 1rem;
+  font-size: 2rem;
 }
